--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,9 @@
 name: Generate Snake
 
 on:
-  schedule: # her gün çalışır
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *" # her gün gece çalışır
+  workflow_dispatch: # manuel çalıştırma için
 
 jobs:
   build:
@@ -11,12 +11,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Generate snake.svg
-        uses: Platane/snk/svg-only@v3
+
+      - name: Generate Snake
+        uses: Platane/snk@v3
         with:
           github_user_name: zekirovskii
           outputs: dist/github-contribution-grid-snake.svg
-      - name: Push snake.svg to output branch
+
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
